2007-12-21  Akim Demaille  <demaille@gostai.com>

	No color for the buildfarm.
	* Makefile.am (CHECK_BUILDFARM_FLAGS): New.
	Use it.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Fix bug from var-lookup.chk.
	* src/ucommand.cc: Check if a variable is inherited && do not display
	  the "undeclared variable" warning.

2007-12-21  Akim Demaille  <demaille@gostai.com>

	make check-buildfarm.
	* Makefile.am (check-buildfarm): New.

2007-12-21  Akim Demaille  <demaille@gostai.com>

	Update tests.
	* tests-local.mk (TESTS_DIRS): Define it.

2007-12-21  Guillaume Deslandes  <deslandes@gostai.com>

	Add 1.x to default test directories, update tests.
	* tests-local.mk: Here.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Cosmetic changes.
	* src/console-server.cc: Here.

2007-12-20  Guillaume Deslandes  <deslandes@gostai.com>

	Update KNOWN_BUGS.
	* KNOWN_BUGS: Here.
	Previously specified URBI bugs not longer exist.
	UObject notify bug explaination augmented.

2007-12-19  Guillaume Deslandes  <deslandes@gostai.com>

	Remove warning at alias use.
	* src/uvariablename.cc: Here.

2007-12-19  Guillaume Deslandes  <deslandes@gostai.com>

	Fix "return after emit" bug and 1.x/lazy-test-eval test.
	* src/ucommand.cc: Here.
	This prevents the event from beeing deleted before
	anyone noticed it was there.

2007-12-19  Guillaume Deslandes  <deslandes@gostai.com>

	Fix "at (isdef (id))" bug.
	* src/uexpression.cc: Here.
	Typing "at (isdef (id))" declared id if it was not
	declared yet.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Fix warning with some versions of gcc.
	* src/console-server.cc: static cast when doing longlong =
	  long+longlong.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Fix segv.
	* src/console-server.cc: std::string s=(char*)0 triggers an
	  exception, so avoid it.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Add -f option to urbi-console.
	* src/console-server.cc: Add -f (which does while(true) work()).
